--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -1098,6 +1098,45 @@
   width: 100%;
   border: none; }
 
+.txt_box {
+  overflow: hidden;
+  height: 56px;
+  width: 100%; }
+  .txt_box .title {
+    color: #1e0602;
+    cursor: pointer; }
+
+.txt_box:before {
+  content: "";
+  float: left;
+  width: 5px;
+  height: 100%; }
+
+.txt_box > *:first-child {
+  float: right;
+  width: 100%;
+  margin-left: -5px; }
+
+.txt_box:after {
+  content: "\02026";
+  color: #1e0602;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  float: right;
+  position: relative;
+  top: -20px;
+  left: 100%;
+  width: 3em;
+  margin-left: -43px;
+  padding-right: 5px;
+  text-align: right;
+  -webkit-background-size: 100% 100%;
+          background-size: 100% 100%;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(50%, white), to(white));
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), white 50%, white);
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0), white 50%, white);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white); }
+
 .faves-page_container .block_content_more {
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
@@ -1515,41 +1554,6 @@
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
-  .faves-page_container .issue-container .description .txt_box {
-    overflow: hidden;
-    height: 56px;
-    width: 100%; }
-    .faves-page_container .issue-container .description .txt_box .title {
-      color: #1e0602;
-      cursor: pointer; }
-  .faves-page_container .issue-container .description .txt_box:before {
-    content: "";
-    float: left;
-    width: 5px;
-    height: 100%; }
-  .faves-page_container .issue-container .description .txt_box > *:first-child {
-    float: right;
-    width: 100%;
-    margin-left: -5px; }
-  .faves-page_container .issue-container .description .txt_box:after {
-    content: "\02026";
-    color: #1e0602;
-    -webkit-box-sizing: content-box;
-            box-sizing: content-box;
-    float: right;
-    position: relative;
-    top: -20px;
-    left: 100%;
-    width: 3em;
-    margin-left: -43px;
-    padding-right: 5px;
-    text-align: right;
-    -webkit-background-size: 100% 100%;
-            background-size: 100% 100%;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0)), color-stop(50%, white), to(white));
-    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), white 50%, white);
-    background: -o-linear-gradient(left, rgba(255, 255, 255, 0), white 50%, white);
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white); }
 
 .faves-page_container .issue-container .photo {
   position: relative;
@@ -1615,6 +1619,108 @@
   -webkit-transition: .3s;
   -o-transition: .3s;
   transition: .3s; }
+
+.compare-page_container .tab_pane {
+  margin-right: -1px; }
+
+.compare-page_container .image_post {
+  height: auto;
+  position: relative; }
+  .compare-page_container .image_post:before {
+    content: '';
+    display: block;
+    padding-top: 100%; }
+
+.compare-page_container .jspVerticalBar {
+  display: none; }
+
+.compare-page_container .modal-mod,
+.compare-page_container .jspContainer,
+.compare-page_container .jspPane {
+  width: 100% !important; }
+
+.compare-page_container .heading {
+  padding: 7px 20px;
+  border-bottom: 1px solid #e5e5e5;
+  background-color: #fafafa;
+  margin-bottom: 0; }
+  .compare-page_container .heading .select2-container {
+    max-width: 280px; }
+  .compare-page_container .heading form {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end; }
+    .compare-page_container .heading form label {
+      white-space: nowrap;
+      margin-right: 7px;
+      color: #585858; }
+
+.compare-page_container .txt_box .title {
+  font-size: 14px;
+  white-space: normal; }
+
+.compare-page_container .txt_box:after {
+  top: -18px; }
+
+.compare-page_container .txt_box {
+  max-height: 36px; }
+
+.compare-page_container .comparison_tools .new_price {
+  overflow: visible; }
+
+.compare-page_container .button_field .favourites, .compare-page_container .button_field .compare {
+  height: 40px;
+  width: 40px;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  border: 1px solid #e5e5e5;
+  color: #818181;
+  cursor: pointer;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+  .compare-page_container .button_field .favourites:first-child, .compare-page_container .button_field .compare:first-child {
+    margin-right: 5px; }
+  .compare-page_container .button_field .favourites i, .compare-page_container .button_field .compare i {
+    color: #ccc;
+    font-size: 15px; }
+
+.compare-page_container .modal_comparison .jspHorizontalBar {
+  position: absolute;
+  padding: 0; }
+
+.compare-page_container .modal_comparison {
+  background-color: #fff;
+  border: 1px solid #e5e5e5; }
+  .compare-page_container .modal_comparison .modal_nav .item:last-child, .compare-page_container .modal_comparison .comparison_list .item:last-child {
+    border: none; }
+  .compare-page_container .modal_comparison .modal_columns .modal_comparison {
+    border: none; }
+  .compare-page_container .modal_comparison .holder {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 14px; }
+  .compare-page_container .modal_comparison .scroll-pane {
+    overflow: hidden !important; }
+  .compare-page_container .modal_comparison .comparison_item {
+    -webkit-flex-shrink: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
+    overflow: hidden; }
+
+.compare-page_container .modal_comparison .jspCapRight {
+  display: none; }
 
 .profile-page_heading {
   border: 1px solid #e5e5e5;
@@ -1844,7 +1950,8 @@
   .faves-page_container .issue-container .more_block .compare:hover,
   .faves-page_container .heading .view-section a:hover,
   .faves-page_container .issue-container .more_block .favourites:hover,
-  .faves-page_container .block_content_more .description_section .links_block button:hover {
+  .faves-page_container .block_content_more .description_section .links_block button:hover,
+  .compare-page_container .button_field .favourites:hover, .compare-page_container .button_field .compare:hover {
     border-color: #999999;
     color: #1d1d1d; }
     .link_block .button_favourites:hover i,
@@ -1855,7 +1962,8 @@
     .faves-page_container .issue-container .more_block .compare:hover i,
     .faves-page_container .heading .view-section a:hover i,
     .faves-page_container .issue-container .more_block .favourites:hover i,
-    .faves-page_container .block_content_more .description_section .links_block button:hover i {
+    .faves-page_container .block_content_more .description_section .links_block button:hover i,
+    .compare-page_container .button_field .favourites:hover i, .compare-page_container .button_field .compare:hover i {
       color: #626262; }
   .order-page_container .orders_nav_buttons a:hover {
     border-color: #999999;
@@ -1881,7 +1989,8 @@
   .personal .settings_button:hover {
     opacity: 1; }
   .description .txt_box .title:hover,
-  .faves-page_container .block_content_more .description_section .title_link:hover {
+  .faves-page_container .block_content_more .description_section .title_link:hover,
+  .compare-page_container .txt_box .title:hover {
     color: #197ac4;
     text-decoration: underline; } }
 
@@ -2141,7 +2250,8 @@
   .order-page_container .order-items_container .order_item:first-child {
     border-top: 1px solid #e5e5e5; }
   .order .personal,
-  .profile .personal {
+  .profile .personal,
+  .compare .personal {
     display: none; }
   .order-page_container .order-items_container .item_container {
     -webkit-flex-wrap: wrap;
@@ -2198,6 +2308,31 @@
       color: #cccccc; } }
 
 @media screen and (max-width: 576px) {
+  .compare-page_container .heading {
+    margin-bottom: 20px;
+    border: none;
+    padding: 0; }
+  .scroll-pane {
+    margin-left: -1px; }
+  .comparison_item {
+    border-right: none;
+    border-left: 1px solid #e5e5e5; }
+  .compare-page_container .modal_comparison {
+    background-color: transparent;
+    border: none; }
+  .compare-page_container .tab_pane {
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    margin-right: 0; }
+  .compare-page_container .heading form label {
+    display: none; }
+  .compare-page_container .heading .select2-container {
+    width: 100%;
+    max-width: 100%; }
+  .compare .modal_nav {
+    display: none; }
+  .compare-page_container .modal_comparison .comparison_item {
+    width: 50%; }
   .faves-page_container .description_list li:nth-child(2),
   .faves-page_container .description_list li:nth-child(3),
   .faves-page_container .description_list li:nth-child(4),
