--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -2323,7 +2323,8 @@
   .compare-page_container .tab_pane {
     background-color: #fff;
     border: 1px solid #e5e5e5;
-    margin-right: 0; }
+    margin-right: 0;
+    overflow: hidden; }
   .compare-page_container .heading form label {
     display: none; }
   .compare-page_container .heading .select2-container {
