--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -2400,6 +2400,7 @@
     background-color: #fff;
     border: 1px solid #e5e5e5;
     margin-right: 0;
+    overflow: hidden;
   }
   .compare-page_container .heading form label {
     display: none;
