--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -1620,28 +1620,10 @@
   -o-transition: .3s;
   transition: .3s; }
 
-.compare-page_container .tab_pane {
-  margin-right: -1px; }
-
-.compare-page_container .image_post {
-  height: auto;
-  position: relative; }
-  .compare-page_container .image_post:before {
-    content: '';
-    display: block;
-    padding-top: 100%; }
-
-.compare-page_container .jspVerticalBar {
-  display: none; }
-
-.compare-page_container .modal-mod,
-.compare-page_container .jspContainer,
-.compare-page_container .jspPane {
-  width: 100% !important; }
-
 .compare-page_container .heading {
   padding: 7px 20px;
-  border-bottom: 1px solid #e5e5e5;
+  border: 1px solid #e5e5e5;
+  border-bottom: none;
   background-color: #fafafa;
   margin-bottom: 0; }
   .compare-page_container .heading .select2-container {
@@ -1663,6 +1645,179 @@
       white-space: nowrap;
       margin-right: 7px;
       color: #585858; }
+
+.compare-page_container .slick-track {
+  margin-left: 0;
+  margin-right: 0; }
+
+.compare-page_container .compare-header {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+  .compare-page_container .compare-header .modal_nav .item:last-child {
+    border-bottom: 1px solid #e5e5e5; }
+
+.compare-page_container .comparison_tools .price {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+
+.compare-page_container .stick_wrap {
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+
+.compare-page_container .slick-dots {
+  visibility: hidden;
+  margin: 0;
+  position: absolute; }
+
+.compare-page_container .tab_pane {
+  position: relative; }
+  .compare-page_container .tab_pane .arrows {
+    display: none;
+    background: -webkit-gradient(linear, left top, right top, color-stop(36%, white), color-stop(54%, rgba(255, 255, 255, 0.92)), color-stop(74%, rgba(255, 255, 255, 0.84)), to(rgba(255, 255, 255, 0)));
+    background: -webkit-linear-gradient(left, white 36%, rgba(255, 255, 255, 0.92) 54%, rgba(255, 255, 255, 0.84) 74%, rgba(255, 255, 255, 0) 100%);
+    background: -o-linear-gradient(left, white 36%, rgba(255, 255, 255, 0.92) 54%, rgba(255, 255, 255, 0.84) 74%, rgba(255, 255, 255, 0) 100%);
+    background: linear-gradient(to right, white 36%, rgba(255, 255, 255, 0.92) 54%, rgba(255, 255, 255, 0.84) 74%, rgba(255, 255, 255, 0) 100%);
+    height: 100%;
+    width: 50px;
+    border: none;
+    position: absolute;
+    z-index: 2;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    cursor: pointer; }
+    .compare-page_container .tab_pane .arrows:hover:before {
+      opacity: 1; }
+    .compare-page_container .tab_pane .arrows:before {
+      content: '';
+      display: block;
+      width: 24px;
+      height: 46px;
+      background: url(../images/content/slick-arrows.png) no-repeat;
+      opacity: 0.7;
+      position: absolute;
+      left: 50%;
+      -webkit-transition-duration: 50%;
+           -o-transition-duration: 50%;
+              transition-duration: 50%;
+      -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%); }
+  .compare-page_container .tab_pane .left_slide {
+    left: 0; }
+  .compare-page_container .tab_pane .right_slide {
+    right: 0;
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg); }
+
+.compare-page_container .compare-content {
+  position: relative;
+  z-index: 1;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+  .compare-page_container .compare-content .block_comparison {
+    border-top: none; }
+
+.compare-page_container .modal_columns {
+  background-color: #fff; }
+
+.compare-page_container .block_comparison {
+  border: 1px solid #e5e5e5; }
+  .compare-page_container .block_comparison .comparison_tools {
+    border-bottom: none; }
+  .compare-page_container .block_comparison .modal_nav .list_items {
+    border-top: none; }
+
+.compare-page_container .fixed {
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  top: 0;
+  background-color: #fff;
+  border-bottom: 1px solid #e5e5e5;
+  -webkit-box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.1); }
+  .compare-page_container .fixed .block_comparison {
+    border-top: none;
+    border-bottom: none; }
+  .compare-page_container .fixed .image_post:before {
+    padding-top: 40%; }
+  .compare-page_container .fixed .image_post .stick_wrap {
+    opacity: 0;
+    visibility: hidden; }
+  .compare-page_container .fixed .image_post .image_wrap {
+    padding: 10px; }
+
+.compare-page_container .hidden {
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-box-shadow: none;
+          box-shadow: none; }
+
+.compare-page_container .modify_pos {
+  padding-top: 246px !important; }
+
+.compare-page_container .holder-slider {
+  margin-left: -1px; }
+
+.compare-page_container .modal_nav .item:last-child,
+.compare-page_container .comparison_list .item:last-child {
+  border-bottom: none; }
+
+.compare-page_container .comparison_item {
+  border-left: 1px solid #e5e5e5;
+  margin-right: -1px;
+  position: relative; }
+
+.compare-page_container .image_post {
+  height: auto;
+  position: relative;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s; }
+  .compare-page_container .image_post:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+  .compare-page_container .image_post .image_wrap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s; }
+    .compare-page_container .image_post .image_wrap img {
+      height: 100%;
+      width: auto;
+      margin: 0 auto; }
 
 .compare-page_container .txt_box .title {
   font-size: 14px;
@@ -1694,33 +1849,10 @@
     color: #ccc;
     font-size: 15px; }
 
-.compare-page_container .modal_comparison .jspHorizontalBar {
-  position: absolute;
-  padding: 0; }
-
-.compare-page_container .modal_comparison {
-  background-color: #fff;
-  border: 1px solid #e5e5e5; }
-  .compare-page_container .modal_comparison .modal_nav .item:last-child, .compare-page_container .modal_comparison .comparison_list .item:last-child {
-    border: none; }
-  .compare-page_container .modal_comparison .modal_columns .modal_comparison {
-    border: none; }
-  .compare-page_container .modal_comparison .holder {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    font-size: 14px; }
-  .compare-page_container .modal_comparison .scroll-pane {
-    overflow: hidden !important; }
-  .compare-page_container .modal_comparison .comparison_item {
-    -webkit-flex-shrink: 0;
-        -ms-flex-negative: 0;
-            flex-shrink: 0;
-    overflow: hidden; }
-
-.compare-page_container .modal_comparison .jspCapRight {
-  display: none; }
+.compare-page_container .active_btn {
+  border-color: #3590ca !important; }
+  .compare-page_container .active_btn i {
+    color: #3590ca !important; }
 
 .profile-page_heading {
   border: 1px solid #e5e5e5;
@@ -2279,6 +2411,24 @@
     border-top: 1px solid #e5e5e5; } }
 
 @media screen and (max-width: 676px) {
+  .comparison_tools {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .compare-page_container .comparison_tools .price {
+    margin-bottom: 10px;
+    text-align: center;
+    height: 40px;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
   .faves-page_container .issue-container .more_block .compare,
   .faves-page_container .issue-container .more_block .favourites {
     font-size: 0; }
@@ -2315,16 +2465,12 @@
   .scroll-pane {
     margin-left: -1px; }
   .comparison_item {
-    border-right: none;
     border-left: 1px solid #e5e5e5; }
   .compare-page_container .modal_comparison {
     background-color: transparent;
     border: none; }
   .compare-page_container .tab_pane {
-    background-color: #fff;
-    border: 1px solid #e5e5e5;
-    margin-right: 0;
-    overflow: hidden; }
+    margin-right: 0; }
   .compare-page_container .heading form label {
     display: none; }
   .compare-page_container .heading .select2-container {
