--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -1696,7 +1696,7 @@
     }
     .image_post {
       &:before {
-        padding-top: 40%;
+        padding-top: 99px;
       }
       .stick_wrap {
         opacity: 0;
@@ -1768,12 +1768,16 @@
         margin-right: 5px;
       }
       height: 40px;
+      padding: 0;
       width: 40px;
       border-radius: 4px;
     border: 1px solid #e5e5e5;
     color: #818181;
     cursor: pointer;
     transition: .3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     i {
       color: #ccc;
       font-size: 15px;
@@ -2458,6 +2462,9 @@
   .comparison_tools {
     flex-direction: column;
     align-items: center;
+  }
+  .compare-page_container .modify_pos {
+    padding-top: 295px !important;
   }
   .compare-page_container .comparison_tools .price {
     margin-bottom: 10px;
