--- a/Shop/landing/app/scss/main.scss
+++ b/Shop/landing/app/scss/main.scss
@@ -151,11 +151,10 @@ ul#countdown li p.timeRefSeconds {
   z-index: 3;
   left: 50%;
   top: 10px;
-  transform: translateX(-50%);
+  margin-left: -476px;
   width: 953px;
   height: 604px;
   background: url(../img/main_img.png) no-repeat;
-  background-position: 150% 0
 }
 .top_section_heading .land_container:after {
   content: '';
