--- a/Shop/landing/app/css/main.css
+++ b/Shop/landing/app/css/main.css
@@ -521,18 +521,28 @@ ul#countdown li p.timeRefSeconds {
 
 .brand_container a .price {
   padding: 0 !important;
-  color: #fff; }
+  color: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 42px; }
 
 .brand_container a .current_price {
   display: block !important;
-  font-size: 40px !important;
+  font-size: 35px !important;
   line-height: 150% !important;
   text-align: center;
   letter-spacing: 2px;
   font-weight: bold; }
-
-.brand_container a .title_block {
-  padding: 16px 20px !important; }
 
 .block_button {
   padding-top: 30px;
