--- a/Shop/landing/app/scss/main.scss
+++ b/Shop/landing/app/scss/main.scss
@@ -466,17 +466,18 @@ ul#countdown li p.timeRefSeconds {
    .price {
     padding: 0 !important;
     color: #fff;
+    display: flex;
+   	justify-content: center;
+   	align-items: center;
+   	min-height: 42px;
    }
    .current_price {
    	display: block !important;
-   	font-size: 40px !important;
+   	font-size: 35px !important;
    	line-height: 150% !important;
    	text-align: center;
    	letter-spacing: 2px;
    	font-weight: bold;
-   }
-   .title_block {
-   	padding: 16px 20px !important;
    }
 }
 .block_button {
