--- a/Shop/card-tiles_NEW/app/scss/print.scss
+++ b/Shop/card-tiles_NEW/app/scss/print.scss
@@ -40,11 +40,13 @@
   .card_content .img_block {
     position: relative;
   }
-  .card_content .img_block img {
-    page-break-inside: always;
+  .sort_line,
+  #set {
+    page-break-before: always;
   }
   .card {
     width: 50%;
+    display: table !important;
   }
   .current_choise {
     display: none;
