--- a/SHOP_dist/app/css/common.css
+++ b/SHOP_dist/app/css/common.css
@@ -1,12 +1,3 @@
-/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
-/**
- * 1. Change the default font family in all browsers (opinionated).
- * 2. Correct the line height in all browsers.
- * 3. Prevent adjustments of font size after orientation changes in
- *    IE on Windows Phone and in iOS.
- */
-/* Document
-   ========================================================================== */
 html {
   font-family: sans-serif;
   /* 1 */
@@ -17,156 +8,69 @@ html {
   -webkit-text-size-adjust: 100%;
   /* 3 */ }
 
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers (opinionated).
- */
 body {
   margin: 0; }
 
-/**
- * Add the correct display in IE 9-.
- */
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block; }
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
 h1 {
   font-size: 2em;
   margin: 0.67em 0; }
 
-/* Grouping content
-   ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- * 1. Add the correct display in IE.
- */
 figcaption,
 figure,
 main {
-  /* 1 */
   display: block; }
 
-/**
- * Add the correct margin in IE 8.
- */
 figure {
   margin: 1em 40px; }
 
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
 hr {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
-  /* 1 */
   height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */ }
+  overflow: visible; }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
 pre {
   font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
+  font-size: 1em; }
 
-/* Text-level semantics
-   ========================================================================== */
-/**
- * 1. Remove the gray background on active links in IE 10.
- * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
- */
 a {
   background-color: transparent;
-  /* 1 */
-  -webkit-text-decoration-skip: objects;
-  /* 2 */ }
+  -webkit-text-decoration-skip: objects; }
 
-/**
- * Remove the outline on focused links when they are also active or hovered
- * in all browsers (opinionated).
- */
 a:active,
 a:hover {
   outline-width: 0; }
 
-/**
- * 1. Remove the bottom border in Firefox 39-.
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
 abbr[title] {
   border-bottom: none;
-  /* 1 */
   text-decoration: underline;
-  /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
-  /* 2 */ }
+          text-decoration: underline dotted; }
 
-/**
- * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
- */
 b,
 strong {
   font-weight: inherit; }
 
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
 b,
 strong {
   font-weight: bolder; }
 
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
 code,
 kbd,
 samp {
   font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */ }
+  font-size: 1em; }
 
-/**
- * Add the correct font style in Android 4.3-.
- */
 dfn {
   font-style: italic; }
 
-/**
- * Add the correct background and color in IE 9-.
- */
 mark {
   background-color: #ff0;
   color: #000; }
 
-/**
- * Add the correct font size in all browsers.
- */
 small {
   font-size: 80%; }
 
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
 sub,
 sup {
   font-size: 75%;
@@ -180,87 +84,44 @@ sub {
 sup {
   top: -0.5em; }
 
-/* Embedded content
-   ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- */
 audio,
 video {
   display: inline-block; }
 
-/**
- * Add the correct display in iOS 4-7.
- */
 audio:not([controls]) {
   display: none;
   height: 0; }
 
-/**
- * Remove the border on images inside links in IE 10-.
- */
 img {
   border-style: none; }
 
-/**
- * Hide the overflow in IE.
- */
 svg:not(:root) {
   overflow: hidden; }
 
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers (opinionated).
- * 2. Remove the margin in Firefox and Safari.
- */
 button,
 input,
 optgroup,
 select,
 textarea {
   font-family: sans-serif;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */ }
+  margin: 0; }
 
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
 button,
 input {
-  /* 1 */
   overflow: visible; }
 
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
 button,
 select {
-  /* 1 */
   text-transform: none; }
 
-/**
- * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
- * 2. Correct the inability to style clickable types in iOS and Safari.
- */
 button,
 html [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */ }
+  -webkit-appearance: button; }
 
-/**
- * Remove the inner border and padding in Firefox.
- */
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -268,133 +129,65 @@ button::-moz-focus-inner,
   border-style: none;
   padding: 0; }
 
-/**
- * Restore the focus styles unset by the previous rule.
- */
 button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText; }
 
-/**
- * Change the border, margin, and padding in all browsers (opinionated).
- */
 fieldset {
   border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em; }
 
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
 legend {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  /* 1 */
   color: inherit;
-  /* 2 */
   display: table;
-  /* 1 */
   max-width: 100%;
-  /* 1 */
   padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */ }
+  white-space: normal; }
 
-/**
- * 1. Add the correct display in IE 9-.
- * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
 progress {
   display: inline-block;
-  /* 1 */
-  vertical-align: baseline;
-  /* 2 */ }
+  vertical-align: baseline; }
 
-/**
- * Remove the default vertical scrollbar in IE.
- */
 textarea {
   overflow: auto; }
 
-/**
- * 1. Add the correct box sizing in IE 10-.
- * 2. Remove the padding in IE 10-.
- */
 [type="checkbox"],
 [type="radio"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */ }
+  padding: 0; }
 
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto; }
 
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
 [type="search"] {
   -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */ }
+  outline-offset: -2px; }
 
-/**
- * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
- */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none; }
 
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */ }
+  font: inherit; }
 
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- */
 details,
 menu {
   display: block; }
 
-/*
- * Add the correct display in all browsers.
- */
 summary {
   display: list-item; }
 
-/* Scripting
-   ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- */
 canvas {
   display: inline-block; }
 
-/**
- * Add the correct display in IE.
- */
 template {
   display: none; }
 
@@ -519,7 +312,8 @@ form {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
-*:before, *:after {
+*:before,
+*:after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
@@ -531,33 +325,42 @@ form {
   background: #2600ff;
   color: #fff; }
 
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
   color: #999; }
 
-input:-moz-placeholder, textarea:-moz-placeholder {
+input:-moz-placeholder,
+textarea:-moz-placeholder {
   color: #999;
   opacity: 1; }
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+input::-moz-placeholder,
+textarea::-moz-placeholder {
   color: #999;
   opacity: 1; }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
   color: #999; }
 
-input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
   color: transparent; }
 
-input:focus:-moz-placeholder, textarea:focus:-moz-placeholder {
+input:focus:-moz-placeholder,
+textarea:focus:-moz-placeholder {
   color: transparent; }
 
-input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+input:focus::-moz-placeholder,
+textarea:focus::-moz-placeholder {
   color: transparent; }
 
-input:focus:-ms-input-placeholder, textarea:focus:-ms-input-placeholder {
+input:focus:-ms-input-placeholder,
+textarea:focus:-ms-input-placeholder {
   color: transparent; }
 
-input.placeholder, textarea.placeholder {
+input.placeholder,
+textarea.placeholder {
   color: #999 !important; }
 
 .columns_set:before {
@@ -972,7 +775,8 @@ i {
   font-size: 18px;
   line-height: 1.2; }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'Ico Moon' !important;
   font-size: 12px;
@@ -1111,6 +915,21 @@ i {
 @media screen and (max-width: 567px) {
   .header .holder {
     padding: 0 0 10px; } }
+
+.main {
+  padding-top: 20px;
+  padding-bottom: 60px; }
+
+.home {
+  padding-top: 0px; }
+
+@media screen and (max-width: 992px) {
+  .main {
+    padding-bottom: 40px; } }
+
+@media screen and (max-width: 567px) {
+  .home {
+    padding-bottom: 30px; } }
 
 .header .group {
   display: -ms-flexbox;
@@ -1942,6 +1761,8 @@ i {
 
 .main_row {
   padding: 30px 0; }
+  .main_row:last-child {
+    padding-bottom: 0; }
 
 @media screen and (max-width: 767px) {
   .main_row {
@@ -3173,6 +2994,10 @@ i {
 .block_news .widget img {
   display: block; }
 
+@media screen and (max-width: 992px) {
+  .block_intro {
+    padding-bottom: 0; } }
+
 @media screen and (max-width: 567px) {
   .block_intro {
     display: none; } }
@@ -3254,7 +3079,7 @@ i {
   background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
   background: -o-linear-gradient(top, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0.01) 0%, rgba(255, 255, 255, 0.17) 21%, rgba(255, 255, 255, 0.83) 79%, rgba(255, 255, 255, 0.99) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#03ffffff', endColorstr='#fcffffff',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#03ffffff', endColorstr='#fcffffff', GradientType=0);
   opacity: 1;
   visibility: visible;
   -webkit-transition: opacity .3s, visibility .3s;
@@ -3364,8 +3189,7 @@ i {
   color: #fff; }
 
 .breadcrumbs {
-  font-size: 0;
-  margin-top: 15px; }
+  font-size: 0; }
 
 @media screen and (max-width: 567px) {
   .breadcrumbs {
@@ -3447,13 +3271,12 @@ i {
     -webkit-flex-direction: column;
             flex-direction: column; } }
 
-.product_card {
-  margin-top: 15px; }
+.page-title {
+  padding-bottom: 20px; }
 
-.product_card .title {
+.page-title .page-title_content {
   color: #1e0602;
   font-size: 30px;
-  margin-bottom: 20px;
   display: -ms-flexbox;
   display: -webkit-box;
   display: -webkit-flex;
@@ -3467,7 +3290,7 @@ i {
   -webkit-align-items: flex-start;
           align-items: flex-start; }
 
-.product_card .title .button_back {
+.page-title .button_back {
   -ms-flex-positive: 0;
   -webkit-box-flex: 0;
   -webkit-flex-grow: 0;
@@ -3495,36 +3318,37 @@ i {
   margin-right: 18px; }
 
 @media screen and (max-width: 567px) {
-  .product_card .title .button_back {
+  .page-title .button_back {
     display: -ms-flexbox;
     display: -webkit-box;
     display: -webkit-flex;
     display: flex; } }
 
-.product_card .title .button_back i {
+.page-title .button_back i {
   color: rgba(0, 0, 0, 0.4);
   display: inline-block;
   vertical-align: middle;
   font-size: 16px; }
 
-.product_card .title img {
+.page-title img {
   display: block;
-  -ms-flex-positive: 0;
   -webkit-box-flex: 0;
   -webkit-flex-grow: 0;
+      -ms-flex-positive: 0;
           flex-grow: 0;
-  -ms-flex-negative: 0;
   -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
           flex-shrink: 0;
-  width: 80px;
-  height: auto;
-  margin-left: 10px; }
+  height: 100%;
+  width: auto;
+  margin-left: 10px;
+  margin-top: 4px; }
 
 @media screen and (max-width: 767px) {
-  .product_card .title img {
+  .page-title img {
     display: none; } }
 
-.product_card .title_general {
+.page-title .title_general {
   -ms-flex-positive: 1;
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
@@ -3535,7 +3359,7 @@ i {
   margin: 0; }
 
 @media screen and (max-width: 567px) {
-  .product_card .title_general {
+  .page-title .title_general {
     font-size: 14px;
     line-height: 1.4; } }
 
@@ -3935,20 +3759,21 @@ i {
 .table_product .cols:first-child {
   margin-top: 0; }
 
-.table_product .col {
+.table_product .first {
   -ms-flex-positive: 1;
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
           flex-grow: 1;
   margin-right: 10px; }
 
-.table_product .col.second {
+.table_product .second {
   margin: 0;
-  -ms-flex-positive: 0;
   -webkit-box-flex: 0;
   -webkit-flex-grow: 0;
+      -ms-flex-positive: 0;
           flex-grow: 0;
-  text-align: right; }
+  text-align: right;
+  width: 100%; }
 
 .table_product span {
   color: #1e0602; }
@@ -5935,6 +5760,8 @@ i {
 
 .with_box {
   margin-top: 60px; }
+  .with_box .box_title {
+    margin-bottom: 0; }
 
 @media screen and (max-width: 567px) {
   .with_box {
@@ -6617,7 +6444,8 @@ i {
     margin: 0; } }
 
 @media screen and (min-width: 1025px) {
-  .slider_watched .slick-arrow:hover, .with_box .arr:hover {
+  .slider_watched .slick-arrow:hover,
+  .with_box .arr:hover {
     opacity: 1; } }
 
 .slider_watched .slick-arrow.slick-next {
@@ -8255,13 +8083,15 @@ i {
   position: relative; }
 
 @media screen and (min-width: 1025px) {
-  .table_color_inner tr:hover td:before, .table_color_inner tr:hover td:after {
+  .table_color_inner tr:hover td:before,
+  .table_color_inner tr:hover td:after {
     display: block; } }
 
 .table_color_inner tr.choice td {
   font-weight: bold; }
 
-.table_color_inner tr.choice td:before, .table_color_inner tr.choice td:after {
+.table_color_inner tr.choice td:before,
+.table_color_inner tr.choice td:after {
   display: block; }
 
 .table_color_inner td {
@@ -9474,9 +9304,6 @@ i {
 
 .footer.unfixed .panel_fixed {
   position: static; }
-
-.footer_holder {
-  margin-top: 30px; }
 
 .footer_holder .group.sup {
   background-color: #ededed;
