--- a/SHOP_dist/app/css/about.css
+++ b/SHOP_dist/app/css/about.css
@@ -206,7 +206,10 @@
       -webkit-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
               box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
       background: #3590ca;
-      padding: 10px 20px; }
+      padding: 10px 20px;
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s; }
     .corporate_section .corporate_offer .title {
       font-size: 30px;
       line-height: 40px;
@@ -347,6 +350,8 @@
 @media screen and (min-width: 1025px) {
   .buttons button:first-child:hover {
     background-color: #ffdd7d; }
+  .corporate_section .corporate_offer .corporate_link:hover {
+    background: #6dafd9; }
   .buttons button:last-child:hover {
     color: #1d1d1d;
     border-color: #999999; } }
