--- a/SHOP_dist/app/css/about.css
+++ b/SHOP_dist/app/css/about.css
@@ -14,22 +14,21 @@
   padding: 15px 0 20px 0; }
 
 .top-about_section .left_content {
-  width: 45%;
+  width: 70%;
   padding-right: 20px; }
 
 .top-about_section .left_content_text {
   font-size: 20px;
-  max-width: 480px;
   line-height: 28px;
   margin-top: 2px;
   letter-spacing: 0; }
 
 .top-about_section .left_content_title {
   font-size: 30px;
-  margin: 0 0 20px; }
+  margin: 0 0 10px; }
 
 .top-about_section .right_content-img {
-  width: 55%;
+  width: 30%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -41,8 +40,7 @@
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
       -ms-flex-align: start;
-          align-items: flex-start;
-  margin-top: -70px; }
+          align-items: flex-start; }
   .top-about_section .right_content-img img {
     width: 100%;
     max-width: 450px;
@@ -51,14 +49,14 @@
 .about-pluses {
   margin-top: 40px; }
   .about-pluses .about-pluses_content {
-    padding: 0 140px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
-            flex-wrap: wrap; }
+            flex-wrap: wrap;
+    margin: 0 -10px; }
   .about-pluses .block {
     display: -webkit-box;
     display: -webkit-flex;
@@ -77,53 +75,14 @@
       padding-left: 10px; }
 
 .about-information {
-  margin-top: 100px; }
+  margin-top: 80px; }
   .about-information .about-information_text {
-    padding: 0 8px 0 500px;
     font-size: 20px;
     line-height: 28px; }
     .about-information .about-information_text p {
       margin-bottom: 14px;
       line-height: 28px;
       margin-top: 0; }
-  .about-information .digits {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 -10px;
-    padding-bottom: 40px; }
-  .about-information .years,
-  .about-information .stars,
-  .about-information .catalog {
-    text-align: center;
-    width: 33.33%;
-    padding: 0 10px; }
-    .about-information .years .title,
-    .about-information .stars .title,
-    .about-information .catalog .title {
-      font-size: 68px;
-      letter-spacing: .1px;
-      margin-bottom: 0;
-      text-align: center;
-      margin-top: -3px; }
-    .about-information .years .text,
-    .about-information .stars .text,
-    .about-information .catalog .text {
-      font-size: 30px;
-      text-indent: -1px;
-      text-align: center; }
-    .about-information .years .subtext,
-    .about-information .stars .subtext,
-    .about-information .catalog .subtext {
-      text-align: center;
-      padding-top: 0; }
-  .about-information .years .title {
-    color: #fd8224; }
-  .about-information .stars .title {
-    color: #a0c126; }
-  .about-information .catalog .title {
-    color: #1897cf; }
 
 .corporate_section {
   margin-top: 100px;
@@ -523,8 +482,6 @@
   .about-information,
   .corporate_section {
     margin-top: 80px; }
-  .about-information .about-information_text {
-    padding: 0 0 0 30%; }
   .about-information .years .title, .about-information .stars .title, .about-information .catalog .title {
     font-size: 48px; }
   .about-information .years .text, .about-information .stars .text, .about-information .catalog .text {
@@ -559,7 +516,9 @@
   .top-about_section .left_content_text {
     line-height: 150%; }
   .top-about_section .left_content {
-    width: 55%; } }
+    width: 75%; }
+  .top-about_section .right_content-img {
+    width: 25%; } }
 
 @media all and (max-width: 992px) {
   .corporate_section .corporate_details .right_section {
@@ -567,9 +526,7 @@
   .about-information .years .text, .about-information .stars .text, .about-information .catalog .text {
     font-size: 18px; }
   .corporate_section .corporate_offer .offer-item {
-    width: 33.33%; }
-  .about-pluses .about-pluses_content {
-    padding: 0 50px; } }
+    width: 33.33%; } }
 
 @media all and (max-width: 767px) {
   .corporate_section .corporate_details .right_section {
@@ -675,7 +632,11 @@
     font-size: 16px; }
   .top-about_section .left_content_title {
     font-size: 20px;
-    font-weight: bold; } }
+    font-weight: bold; }
+  .top-about_section .right_content-img {
+    display: none; }
+  .top-about_section .left_content {
+    width: 100%; } }
 
 @media all and (max-width: 576px) {
   .map_wrapper {
@@ -701,8 +662,4 @@
   .about-information .years, .about-information .stars {
     margin-bottom: 20px; }
   .about-pluses .block {
-    width: 100%; }
-  .top-about_section .right_content-img {
-    display: none; }
-  .top-about_section .left_content {
     width: 100%; } }
