--- a/SHOP_dist/app/scss/common.scss
+++ b/SHOP_dist/app/scss/common.scss
@@ -6164,8 +6164,8 @@ i {
     display: none;
   }
   .paginator .paginator_link_page {
-        width: 16.66%;
-    }
+    width: 16.66%;
+  }
 }
 
 //общие значения
@@ -10505,5 +10505,93 @@ i {
 @media all and (max-width: 1025px) {
   .slider_watched .bottom {
     transform: translateY(0);
+  }
+}
+
+.with_sidebar-container {
+  display: flex;
+}
+.left_sidebar_nav {
+  min-width: 300px;
+  padding-right: 20px;
+  flex-shrink: 0;
+}
+.left_sidebar_nav-content {
+  li.nav_item {
+    position: relative;
+    padding: 16px 10px 16px 20px;
+    border-bottom: 1px solid #e5e5e5;
+    &:last-child {
+      border: none;
+    }
+    &:after {
+      right: 15px;
+      color: #d5d5d5;
+      font-size: 18px;
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900;
+      content: "\f054";
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      text-rendering: auto;
+      line-height: 1;
+    }
+  }
+  .active {
+    background-color: #fafafa;
+    &:after {
+      display: none !important;
+    }
+    span {
+      color: #1e0602 !important;
+      font-weight: bold;
+    }
+     a {
+      display: none;
+     }
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    span {
+      color: #585858;
+    }
+    a {
+      display: block;
+      position: absolute;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+  }
+}
+.left_sidebar_nav-content {
+  background-color: #fff;
+  border: 1px solid #e5e5e5;
+}
+.right_content-container {
+  width: 100%;
+}
+
+@media all and (min-width: 1025px) {
+  .left_sidebar_nav-content li.nav_item:hover {
+    background-color: #fafafa;
+    span {
+      color: #197ac4;
+    }
+  }
+}
+@media all and (max-width: 992px) {
+  .left_sidebar_nav {
+    display: none;
   }
 }
