--- a/SHOP_dist/app/scss/content.scss
+++ b/SHOP_dist/app/scss/content.scss
@@ -1270,6 +1270,10 @@ ul.categories_list {
   }
 }
 
+.shops {
+  
+}
+
 @media all and (min-width: 1025px) {
   .buttons button:first-child:hover,
   .clients .submit:hover {
