--- a/portfolio/FLG/app/css/all.css
+++ b/portfolio/FLG/app/css/all.css
@@ -4,6 +4,28 @@
   font-style: normal;
   src: url("../fonts/calibri.ttf") format("truetype"); }
 
+@font-face {
+  font-family: "OpenSansRegular";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/OpenSans/OpenSansRegular/OpenSansRegular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "HeliosCondRegular";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/HeliosCond/HeliosCondRegular/HeliosCondRegular.ttf") format("truetype"); }
+
+@font-face {
+  font-family: "HeliosCondBold";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/HeliosCond/HeliosCondBold/HeliosCondBold.ttf") format("truetype"); }
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
 html {
   font: 10px "CalibriRegular";
   min-width: 320px; }
@@ -106,7 +128,8 @@ html {
 
 header {
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+  padding-bottom: 20px; }
   header .header-content {
     padding-right: 290px;
     position: relative; }
@@ -153,88 +176,85 @@ header {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
 
-footer .top-footer_container {
-  background-color: #eae8e8; }
-  footer .top-footer_container .title {
-    color: #2e3653;
-    font-size: 2.4rem;
-    display: block;
-    padding-bottom: 8px; }
-  footer .top-footer_container .content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    padding: 15px 0 45px 0; }
-
-footer .bottom_footer_container {
-  height: 120px; }
-  footer .bottom_footer_container .copy {
-    display: block;
-    text-align: center;
+footer {
+  padding-top: 30px; }
+  footer .top-footer_container {
+    background-color: #eae8e8; }
+    footer .top-footer_container .title {
+      color: #2e3653;
+      font-size: 2.4rem;
+      display: block;
+      padding-bottom: 8px; }
+    footer .top-footer_container .content {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      padding: 15px 0 45px 0; }
+  footer .bottom_footer_container {
+    height: 120px; }
+    footer .bottom_footer_container .copy {
+      display: block;
+      text-align: center;
+      font-size: 1.8rem;
+      color: #2e3653;
+      padding-top: 5px; }
+  footer .left_section,
+  footer .center_section,
+  footer .right_section {
+    width: 28.7%; }
+  footer .left_section a,
+  footer .center_section a {
     font-size: 1.8rem;
     color: #2e3653;
-    padding-top: 5px; }
-
-footer .left_section,
-footer .center_section,
-footer .right_section {
-  width: 28.7%; }
-
-footer .left_section a,
-footer .center_section a {
-  font-size: 1.8rem;
-  color: #2e3653;
-  text-decoration: none; }
-
-footer .left_section ul,
-footer .center_section ul {
-  margin: 0;
-  padding: 0;
-  list-style: none; }
-
-footer .right_section {
-  position: relative; }
-  footer .right_section .adress,
-  footer .right_section .tel,
-  footer .right_section .email,
-  footer .right_section .time {
-    display: block;
-    font-size: 1.8rem;
-    color: #2e3653; }
-    footer .right_section .adress:last-child,
-    footer .right_section .tel:last-child,
-    footer .right_section .email:last-child,
-    footer .right_section .time:last-child {
-      margin-top: 20px; }
-  footer .right_section .socials {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    top: 9px;
-    left: 130px; }
-    footer .right_section .socials a {
-      height: 35px;
-      margin-right: 17px; }
-      footer .right_section .socials a:last-child {
-        margin: 0; }
-    footer .right_section .socials .facebook {
-      background: url(../img/socials/facebook.png) no-repeat;
-      -webkit-background-size: 100% 100%;
-              background-size: 100% 100%;
-      width: 17px; }
-    footer .right_section .socials .twitter {
-      background: url(../img/socials/twitter.png) no-repeat;
-      -webkit-background-size: 100% 100%;
-              background-size: 100% 100%;
-      width: 39px; }
-    footer .right_section .socials .instagram {
-      background: url(../img/socials/insta.png) no-repeat;
-      -webkit-background-size: 100% 100%;
-              background-size: 100% 100%;
-      width: 36px; }
+    text-decoration: none; }
+  footer .left_section ul,
+  footer .center_section ul {
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+  footer .right_section {
+    position: relative; }
+    footer .right_section .adress,
+    footer .right_section .tel,
+    footer .right_section .email,
+    footer .right_section .time {
+      display: block;
+      font-size: 1.8rem;
+      color: #2e3653; }
+      footer .right_section .adress:last-child,
+      footer .right_section .tel:last-child,
+      footer .right_section .email:last-child,
+      footer .right_section .time:last-child {
+        margin-top: 20px; }
+    footer .right_section .socials {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      position: absolute;
+      top: 9px;
+      left: 130px; }
+      footer .right_section .socials a {
+        height: 35px;
+        margin-right: 17px; }
+        footer .right_section .socials a:last-child {
+          margin: 0; }
+      footer .right_section .socials .facebook {
+        background: url(../img/socials/facebook.png) no-repeat;
+        -webkit-background-size: 100% 100%;
+                background-size: 100% 100%;
+        width: 17px; }
+      footer .right_section .socials .twitter {
+        background: url(../img/socials/twitter.png) no-repeat;
+        -webkit-background-size: 100% 100%;
+                background-size: 100% 100%;
+        width: 39px; }
+      footer .right_section .socials .instagram {
+        background: url(../img/socials/insta.png) no-repeat;
+        -webkit-background-size: 100% 100%;
+                background-size: 100% 100%;
+        width: 36px; }
 
 aside {
   width: 290px;
@@ -257,7 +277,7 @@ aside {
     -webkit-align-items: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 52px;
+    height: 50px;
     background-color: #2e3653; }
     aside .top-contacts .main_number a {
       color: #fff;
@@ -391,6 +411,98 @@ aside {
       background: #2e3653;
       padding: 5px 0;
       max-width: 300px; }
+
+.tile_type_1,
+.tile_type_3 {
+  width: 25%;
+  padding: 7px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .tile_type_1 .block_content,
+  .tile_type_3 .block_content {
+    position: relative; }
+    .tile_type_1 .block_content:before,
+    .tile_type_3 .block_content:before {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+    .tile_type_1 .block_content a,
+    .tile_type_3 .block_content a {
+      position: absolute;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: 100%;
+      height: 100%;
+      top: 0; }
+      .tile_type_1 .block_content a img,
+      .tile_type_3 .block_content a img {
+        height: 30%;
+        width: auto; }
+      .tile_type_1 .block_content a .title,
+      .tile_type_3 .block_content a .title {
+        text-transform: uppercase;
+        color: #fff;
+        font-size: 1.8em;
+        position: absolute;
+        bottom: 7px;
+        left: 10px; }
+
+.tile_type_2 {
+  width: 50%;
+  padding: 7px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .tile_type_2 .block_content {
+    position: relative; }
+    .tile_type_2 .block_content:before {
+      content: '';
+      display: block;
+      padding-top: 100%; }
+    .tile_type_2 .block_content a {
+      position: absolute;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: 100%;
+      height: 100%;
+      top: 0; }
+      .tile_type_2 .block_content a .title {
+        text-transform: uppercase;
+        color: #fff;
+        text-align: center;
+        display: block;
+        font-size: 1.8em;
+        position: absolute;
+        bottom: 7px;
+        left: 0;
+        width: 100%; }
+
+.tile_type_3 {
+  width: 100%;
+  height: 50%; }
+  .tile_type_3 .block_content {
+    height: 100%; }
+  .tile_type_3 .block_content:before {
+    display: none; }
 
 @media screen and (min-width: 1025px) {
   footer .left_section a:hover,
