--- a/portfolio/FLG/app/css/main.css
+++ b/portfolio/FLG/app/css/main.css
@@ -6,8 +6,7 @@
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: flex;
-  padding: 20px 0 30px 0; }
+  display: flex; }
 
 .tile1 {
   background-color: #ff7d7d; }
