--- a/portfolio/FLG/app/scss/category.scss
+++ b/portfolio/FLG/app/scss/category.scss
@@ -72,6 +72,7 @@
   }
   .select-container {
     position: relative;
+    background-color: #fff;
     &:before {
       content: '';
       display: block;
@@ -95,6 +96,7 @@
     font: 1.8em "HeliosCondRegular";
     text-transform: uppercase;
     outline: none;
+    background-color: #fff;
     /*for WebKit*/
     -webkit-appearance: none;
     /* for FF */
