--- a/portfolio/FLG/app/css/all.css
+++ b/portfolio/FLG/app/css/all.css
@@ -360,7 +360,9 @@ aside {
       color: #000;
       outline: none;
       -webkit-appearance: none;
-      background-color: #fff; }
+      background-color: #fff;
+      -webkit-border-radius: none;
+              border-radius: none; }
     aside .search .submit {
       background-color: #2e3653;
       padding-bottom: 6px;
@@ -373,7 +375,11 @@ aside {
               flex-shrink: 0;
       cursor: pointer;
       outline: none;
-      -webkit-appearance: none; }
+      -webkit-appearance: none;
+      -webkit-border-radius: none;
+              border-radius: none;
+      padding: 0;
+      padding-bottom: 3px; }
   aside .aside_container {
     display: -webkit-box;
     display: -webkit-flex;
