--- a/portfolio/FLG/app/scss/all.scss
+++ b/portfolio/FLG/app/scss/all.scss
@@ -334,7 +334,7 @@ aside {
             outline: none;
             -webkit-appearance: none;
             background-color: #fff;
-            border-radius: none;
+            border-radius: 0px;
         }
         .submit {
             background-color: #2e3653;
@@ -347,7 +347,7 @@ aside {
             cursor: pointer;
             outline: none;
             -webkit-appearance: none;
-            border-radius: none;
+            border-radius: 0px;
             padding: 0;
             padding-bottom: 3px;
         }
