--- a/Shop/landing/app/css/landing-page.css
+++ b/Shop/landing/app/css/landing-page.css
@@ -227,7 +227,7 @@ ul#countdown li p.timeRefSeconds {
     -o-transition: 0.3s;
     transition: 0.3s; }
     .link-wrapper__link:hover {
-      background-color: #f39801; }
+      background-color: #e08e06; }
 
 .product-block_padding {
   padding-top: 120px; }
